completed thesis.pdf document for submission

--- a/tex/ch2.tex
+++ b/tex/ch2.tex
@@ -35,12 +35,19 @@ reviewed.
 
 Current bioprocess facility design leverages software packages for creating mass
 balances and for schedule simulation.  The mass balance tool
-\emph{SuperPro Designer\textsuperscript{\textregistered}} 
-and the scheduling tool \emph{SchedulePro\textsuperscript{\textregistered}},
+\emph{SuperPro Designer\textsuperscript{\textregistered}}\footnote{
+    \emph{SuperPro Designer\textsuperscript{\textregistered}},
+    \url{http://www.intelligen.com/superpro_overview.html}} 
+and the scheduling tool
+\emph{SchedulePro\textsuperscript{\textregistered}}\footnote{
+    \emph{SchedulePro\textsuperscript{\textregistered}},
+    \url{http://www.intelligen.com/schedulepro_overview.html}},
 both from Intelligen, Inc. (\emph{Scotch Plains, New Jersey, U.S.A.}) are
 examples of software packages that are widely used, particularly by American
 firms.
-The \emph{INOSIM} family of software from INOSIM Software GmbH
+The \emph{INOSIM}\footnote{
+        \emph{INOSIM}, \url{http://www.inosim-software.com/}} 
+family of software from INOSIM Software GmbH
 \emph{Dortmund, Germany} is used particularly by German and Swiss firms.
 
 \citet{Petrides:2014} outline a workflow for 
@@ -91,16 +98,23 @@ how the simulations were carried out.
 
 \citet{Stewart:2005} cite the work of \citet{Al-Otaibi:2004} and outline a
 method for optimising tank farm design using Monte Carlo simulation.  They
-mention the use of a software tool called \emph{GRTMPS} from 
-\emph{Haverley Systems, Inc., Houston, Texas, U.S.A}, supported by \emph{Excel}
-spreadsheet software and \emph{Access} database software
+mention the use of a software tool called \emph{GRTMPS}\footnote{
+    \emph{GRTMPS},
+    \url{https://www.haverly.com/main-products/13-products/9-grtmps}} from 
+\emph{Haverley Systems, Inc., Houston, Texas, U.S.A}, supported by
+\emph{Excel}\footnote{\emph{Excel}, \url{https://office.microsoft.com/excel}}
+spreadsheet software and 
+\emph{Access}\footnote{\emph{Access}, 
+    \url{https://office.microsoft.com/access}}
+database software
 (\emph{Microsoft Inc, Redmond, Washington, U.S.A}).
 Again, theirs is a short magazine article.  It indicates that the scheduling 
 produced useful results but does not give any technical detail as to how the
 simulation was carried out.
 
 \citet{Sharda:2009} outline the use of the discrete-event simulation tool
-\emph{Arena\textsuperscript{\textregistered}} from
+\emph{Arena\textsuperscript{\textregistered}}\footnote{
+    \emph{Arena}, \url{https://www.arenasimulation.com/}} from
 \emph{Rockwell Automation, Inc., Milwaukee, Wisconsin, U.S.A.} to optimise the 
 utilisation of existing tank farm facilities and cite the work of
 \citet{Sharda:2009}
