--- a/tex/ch6.tex
+++ b/tex/ch6.tex
@@ -28,7 +28,7 @@ The results obtained show that the model is suitable for generating optimal
 buffer preparation designs.
 For problem sizes in the expected range of 10--20 buffers, it is important to
 note that an exact solution can be obtained in a reasonable amount of time.
-This is an important result; prior to carrying out this exercise, it was not
+This is a significant result; prior to carrying out this exercise, it was not
 known if an optimum solution could feasibly be obtained.
 
 The use of the proprietary CPLEX solver produced the fastest solutions and
